welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:-9: error: not found: value isFacingTrail
			if (isFacingTrail()) {
                            ^SlugTracking:8: error: return outside method definition
                 	return true;
                        ^SlugTracking:20: error: return outside method definition
                 		return true;
                                ^SlugTracking:30: error: return outside method definition
                 			return true ;
                                        ^SlugTracking:32: error: return outside method definition
                 				return false ;
                                                ^